# mcp-client

./: README.md  app.py  chainlit.md  client.py  client.txt  fix_server.py  main.py  pyproject.toml  requirements-chainlit.txt  secrets.toml  server.py  streamlit_client.py
reports/: icc_top_10_odi_batsmen_20250324_103324.md  icc_top_10_test_batsmen_20250324_103325.md
web-client/: README.md  package.json  server.py
web-client/public/: index.html  manifest.json
web-client/src/: App.css  App.js  api.js
