[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.3",
    "dicttoxml>=1.7.16",
    "google-genai>=1.5.0",
    "google-search-results>=2.4.2",
    "mcp>=1.4.1",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "serpapi>=0.1.5",
    "streamlit>=1.29.0",
    "xmltodict>=0.14.2",
]
